--- a/classtest1.html
+++ b/classtest1.html
@@ -20,8 +20,7 @@
         <li>Listening songs</li>
     </ul>
     <hr>
-    <img src="https://bestflowersite.co/most-beautiful-flowers-desktop-wallpapers/" alt="sunrise on mountains with beautiful blue sky" width="600">
-<hr>
+    <img src="feather.jpg" alt="feather image" width="300" height="200">
     <h3>Useful links</h3>
     <p>click below to open google</p>
     <a href="https://www.google.com">Google</a>
