--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
     <head>
         <title>my first page</title>
     </head>
+    <style>
+        h6{
+
+            color: blue;
+            font-size: small;
+            font-family: 'Times New Roman', Times, serif;
+            background-color: yellow;
+        }
+    </style>
     <body>
-        <h1>first heading</h1>
+        <h1 style="color: red;">first heading</h1>
         <h2>second heading</h2>
         <h3>third heading</h3>
         <h4>fourth heading</h4>
